# RAG

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  __main__.py  cache.py  chunker.py  evaluator.py  ingestor.py  llm.py  models.py  retriever.py
tests/: test_chunker.py  test_evaluator.py  test_models.py  test_retriever.py
