[project]
name = "rag"
version = "0.1.0"
description = "RAG system for vLLM documentation and code retrieval"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "tqdm>=4.0",
    "bm25s>=0.2.0",
    "scikit-learn>=1.3",
    "transformers>=4.40",
    "torch>=2.0",
    "fire>=0.6.0",
    "flake8>=7.0",
    "mypy>=1.0",
    "sentence-transformers>=2.0",
    "black>=24.0",
    "requests>=2.0",
    "types-requests>=2.0",
    "types-tqdm>=4.0",
    "pytest>=8.0",
    "accelerate>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["bm25s", "bm25s.*", "fire", "sklearn.*", "scipy.*", "sentence_transformers", "tqdm", "tqdm.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
